# PathSpace

./: .gitignore  meson.build
shaders/: canvas.frag  canvas.vert  frame.frag  frame.vert
src/: canvas.cpp  canvas.hpp  core.hpp  frame.cpp  frame.hpp  gfx.cpp  gfx.hpp  main.cpp  prelude.hpp
src/graphics/: backend.cpp  canvas.cpp  core.hpp  frame.cpp  window.cpp
src/math/: vector.hpp
src/shapes/: core.hpp  diamond.cpp  disc.cpp  plane.cpp  shapelist.cpp  sphere.cpp
subprojects/: pcg.wrap
